tests/ui/error-codes/E0771.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/E0771.rs:3:41
   |
LL | fn function_with_str<'a, const STRING: &'a str>() {}
   |                                         ^^ the type must not depend on the parameter `'a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0770`.
